// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createComplexityRule > negative limits 1`] = `
[
  [GraphQLError: Query complexity of 2 exceeds max complexity of -1],
  [GraphQLError: Query depth of 2 exceeds max depth of -1],
  [GraphQLError: Query breadth of 2 exceeds max breadth of -1],
]
`;

exports[`createComplexityRule > zero limits 1`] = `
[
  [GraphQLError: Query complexity of 2 exceeds max complexity of 0],
  [GraphQLError: Query depth of 2 exceeds max depth of 0],
  [GraphQLError: Query breadth of 2 exceeds max breadth of 0],
]
`;

exports[`simple objects example schema > complexity from query > as string 1`] = `
{
  "breadth": 7,
  "complexity": 66,
  "depth": 5,
}
`;

exports[`simple objects example schema > generates expected schema 1`] = `
"interface Character {
  """Which movies they appear in."""
  appearsIn: [Episode!]

  """The friends of the character, or an empty list if they have none."""
  friends(limit: Int): [Character]!

  """The friends of the character, or an empty list if they have none."""
  friendsUnion(limit: Int): [Friend]!

  """The id of the character"""
  id: ID

  """The name of the character"""
  name: String
}

"""A mechanical creature in the Star Wars universe."""
type Droid implements Character {
  """Which movies they appear in."""
  appearsIn: [Episode!]

  """The friends of the character, or an empty list if they have none."""
  friends(limit: Int): [Character]!

  """The friends of the character, or an empty list if they have none."""
  friendsUnion(limit: Int): [Friend]!

  """The id of the character"""
  id: ID

  """The name of the character"""
  name: String

  """The primary function of the droid."""
  primaryFunction: String
}

"""One of the films in the Star Wars Trilogy"""
enum Episode {
  """Released in 1980."""
  EMPIRE

  """Released in 1983"""
  JEDI

  """Released in 1977."""
  NEWHOPE
}

union Friend = Droid | Human

"""A humanoid creature in the Star Wars universe."""
type Human implements Character {
  """Which movies they appear in."""
  appearsIn: [Episode!]

  """The friends of the character, or an empty list if they have none."""
  friends(limit: Int): [Character]!

  """The friends of the character, or an empty list if they have none."""
  friendsUnion(limit: Int): [Friend]!

  """The home planet of the human, or null if unknown."""
  homePlanet: String

  """The id of the character"""
  id: ID

  """The name of the character"""
  name: String
}

type Query {
  droid(
    """id of the character"""
    id: ID!
  ): Droid
  hero(
    """
    If omitted, returns the hero of the whole saga. If provided, returns the hero of that particular episode.
    """
    episode: Episode!
  ): Character
  human(
    """id of the character"""
    id: ID!
  ): Human
  r2d2: Droid
}"
`;

exports[`simple objects example schema > negative limits > negative breadth 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum breadth (breadth: 2, max: -1)],
  ],
}
`;

exports[`simple objects example schema > negative limits > negative complexity 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum complexity (complexity: 2, max: -1)],
  ],
}
`;

exports[`simple objects example schema > negative limits > negative depth 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum depth (depth: 2, max: -1)],
  ],
}
`;

exports[`simple objects example schema > queries > complexity based on args 1`] = `
{
  "data": {
    "hero": {
      "friends": [
        {
          "friends": [
            {
              "friends": [
                {
                  "appearsIn": [
                    "NEWHOPE",
                    "EMPIRE",
                    "JEDI",
                  ],
                  "name": "Han Solo",
                },
              ],
            },
          ],
          "name": "Han Solo",
        },
      ],
    },
  },
}
`;

exports[`simple objects example schema > queries > complexity based options 1`] = `
{
  "data": {
    "human": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum complexity (complexity: 501, max: 200)],
  ],
}
`;

exports[`simple objects example schema > queries > too complex 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum complexity (complexity: 287, max: 200)],
  ],
}
`;

exports[`simple objects example schema > queries > too deep 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum depth (depth: 6, max: 5)],
  ],
}
`;

exports[`simple objects example schema > queries > too wide 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum breadth (breadth: 13, max: 10)],
  ],
}
`;

exports[`simple objects example schema > queries > valid query 1`] = `
{
  "data": {
    "hero": {
      "friends": [
        {
          "__typename": "Human",
          "friends": [
            {
              "friends": [
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
              ],
            },
          ],
          "name": "Han Solo",
        },
        {
          "__typename": "Human",
          "friends": [
            {
              "friends": [
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
              ],
            },
          ],
          "name": "Leia Organa",
        },
        {
          "__typename": "Droid",
          "friends": [
            {
              "friends": [
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
              ],
            },
          ],
          "name": "C-3PO",
        },
        {
          "__typename": "Droid",
          "friends": [
            {
              "friends": [
                {
                  "name": "Han Solo",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Leia Organa",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
            {
              "friends": [
                {
                  "name": "Luke Skywalker",
                },
                {
                  "name": "Han Solo",
                },
                {
                  "name": "C-3PO",
                },
                {
                  "name": "R2-D2",
                },
              ],
            },
          ],
          "name": "R2-D2",
        },
      ],
      "friendsUnion": [
        {
          "__typename": "Human",
        },
        {
          "__typename": "Human",
        },
        {
          "__typename": "Droid",
        },
        {
          "__typename": "Droid",
        },
      ],
    },
  },
}
`;

exports[`simple objects example schema > zero limits > zero breadth 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum breadth (breadth: 2, max: 0)],
  ],
}
`;

exports[`simple objects example schema > zero limits > zero complexity 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum complexity (complexity: 2, max: 0)],
  ],
}
`;

exports[`simple objects example schema > zero limits > zero depth 1`] = `
{
  "data": {
    "hero": null,
  },
  "errors": [
    [GraphQLError: Query exceeds maximum depth (depth: 2, max: 0)],
  ],
}
`;
